# GUI-P2P-File-Transfer-System

./: CMakeLists.txt  LICENSE  README.md  build_and_run.sh
client/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  PeerServer.cpp  PeerServer.h  Style.h  TrackerSocket.cpp  TrackerSocket.h  TransferManager.cpp  TransferManager.h  main.cpp
shared/: crypto.cpp  crypto.h  protocol.cpp  protocol.h
tracker/: TrackerBackend.cpp  TrackerBackend.h  TrackerWindow.cpp  TrackerWindow.h  main.cpp
